2005-05-27  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpeditor.[ch]: added a name label (with properties
	to show/hide and to set it).

	* app/widgets/gimpcontainergridview.[ch]
	* app/widgets/gimphistogrameditor.[ch]: removed the label here and
	use the functionality now provided by GimpEditor instead.

	* app/widgets/gimpcontainerpopup.c: changed accordingly.

2005-05-27  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimphistogrameditor.c: use a smaller font for the
	statistics.

2005-05-27  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdata.c: reverted previous change for now.

2005-05-27  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdata.c: mark properties as serializable.

2005-05-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c
	* plug-ins/helpbrowser/queue.[ch]: store the scroll offset in the
	history and set it when using the Back and Forward actions. Fixes
	bug #165022.

2005-05-26  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_set_highlight):
	destroy the regions allocated here.

2005-05-26  Sven Neumann  <sven@gimp.org>

	* app/dialogs/channel-options-dialog.c: fixed capitalization,
	removed trailing whitespace.

	* app/actions/channels-commands.c (channels_new_channel_response):
	also set the channel color if creating the channel by duplicating
	the selection.

	* app/actions/channels-commands.c
	* app/actions/qmask-commands.c: added mnemonics.

2005-05-26  Nathan Summers  <rock@gimp.org>

	* app/dialogs/channel-options-dialog.[ch]: added an "initialize from
	selection" option to the new channel dialog.

	* app/actions/channels-commands.c
	* app/actions/qmask-commands.c: modified accordingly.

2005-05-26  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdata.c: added more properties.

2005-05-26  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdata.[ch]: added MIME type as a construct property
	to GimpData.

	* app/core/gimpbrush-load.c
	* app/core/gimpbrushgenerated.c